<resources>
    <string name="app_name">toolplus</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tool">Herramienta:</string>
    <string name="description">Descripción:</string>
    <string name="price">Precio:</string>
    <string name="addTool">Agregar heramienta</string>
    <string name="updateTool">Actualizar heramienta</string>
    <string name="cancelRegister">Cancelar registro</string>
    <string name="cancelUpdate">Cancelar Actualización</string>
    <string name="register">Registro de herramientas</string>
    <string name="update">Actualización de herramientas</string>
    <string name="imageTool">Imagen para la herramienta</string>
    <string name="count">Cantidad:</string>
    <string name="alertDialogText">¿Desea realizar esta acción?</string>
    <string name="descriptionImagen">Background</string>
<<<<<<< HEAD
    <string name="days">Dias</string>
=======
    <string name="no">No</string>
    <string name="image_for_dialog">Image for dialog</string>
    <string name="yes">Si</string>
    <string name="login">Iniciar Sesión</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
>>>>>>> a5049963e4f45071227f7df339e2115f6ca6718d
</resources>