<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateToolFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/herramientas_varias_wallpaper_preview"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/formUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/update"
            android:textColor="#fff"
            android:textSize="20sp"
            android:gravity="center"
            android:translationY="50dp"/>

        <LinearLayout
            android:layout_width="411dp"
            android:layout_height="577dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/background_register"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="138dp"
                android:layout_height="116dp"
                android:contentDescription="@string/imageTool"
                tools:src="@tools:sample/avatars" />

            <EditText
                android:id="@+id/nameToolUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="Destornillador"
                android:background="@drawable/edge_layout"
                android:hint="@string/tool"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:textColor="#fff"
                android:textColorHint="#fff" />

            <EditText
                android:id="@+id/descriptionToolUpdate"
                android:layout_width="match_parent"
                android:layout_height="98dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="Descripción"
                android:background="@drawable/edge_layout"
                android:hint="@string/description"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:textColor="#fff"
                android:textColorHint="#fff" />

            <EditText
                android:id="@+id/priceToolUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="0"
                android:background="@drawable/edge_layout"
                android:hint="@string/price"
                android:inputType="number"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:textColor="#fff"
                android:textColorHint="#fff" />

            <EditText
                android:id="@+id/countToolUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="0"
                android:background="@drawable/edge_layout"
                android:hint="@string/count"
                android:inputType="number"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:textColor="#fff"
                android:textColorHint="#fff" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addUpdate"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:clickable="true"
                android:contentDescription="@string/updateTool"
                android:src="@android:drawable/stat_notify_sync"
                android:translationX="-70dp"
                android:translationY="24dp"
                app:backgroundTint="#CC18CA1F"
                app:rippleColor="@color/material_on_background_emphasis_high_type" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/cancelUpdate"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:clickable="true"
                android:contentDescription="@string/cancelUpdate"
                android:src="@android:drawable/button_onoff_indicator_on"
                android:translationX="70dp"
                android:translationY="-30dp"
                app:backgroundTint="#CCFFB300" />
        </LinearLayout>

    </LinearLayout>

    <GridView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</RelativeLayout>