<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterToolFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/herramientas_varias_wallpaper_preview"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#d8000000"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="150dp"
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:background="@drawable/background_register"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameToolRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="20dp"
                android:autofillHints="Destornillador"
                android:hint="@string/tool"
                android:inputType="text"
                android:textColor="#fff"
                android:textColorHint="#fff" />

            <EditText
                android:id="@+id/descriptionToolRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/description"
                android:inputType="text"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:autofillHints="Descripción" />

            <EditText
                android:id="@+id/priceToolRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/price"
                android:inputType="number"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:autofillHints="0" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@android:drawable/ic_input_add"
                android:translationX="-100dp"
                app:backgroundTint="#18CA1F"
                android:contentDescription="@string/addTool" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@android:drawable/button_onoff_indicator_on"
                android:translationX="100dp"
                android:translationY="-55dp"
                app:backgroundTint="#FFB300"
                android:contentDescription="@string/cancelRegister" />
        </LinearLayout>

    </LinearLayout>

    <GridView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</RelativeLayout>