<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/loginUser"
    android:layout_height="match_parent"
    tools:context=".FirstActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/herramientas_varias_wallpaper_preview"
        android:scaleType="centerCrop"
        android:contentDescription="@string/descriptionImagen" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:gravity="center"
        android:orientation="vertical"/>

    <TextView
        android:id="@+id/tvtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/eduser"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvtitle"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:textColorHint="@color/white"
        app:startIconDrawable="@drawable/baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            android:inputType="textEmailAddress"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edpassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eduser"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:textColorHint="@color/white"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edcontra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--Button entrar-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnentrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edpassword"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/design_default_color_secondary_variant"
        android:onClick="entrar"
        android:text="ENTRAR"
        android:textColor="@color/white" />
    <!--edittext 2 -->
    <TextView
        android:id="@+id/tvoption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="crear cuenta"
        android:textColor="@color/white"
        android:layout_below="@+id/btnentrar"/>
    <!--layout para los dos botones -->
    <LinearLayout
        android:layout_width="401dp"
        android:layout_height="256dp"
        android:layout_below="@+id/tvoption"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="77dp"
        android:layout_centerHorizontal="true"
        android:gravity="center">
        <!--boton registrar cuenta -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerData"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/design_default_color_secondary_variant"
            android:onClick="RegistroData"
            android:text="Crear"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>